--- a/style.css
+++ b/style.css
@@ -10,3 +10,29 @@ div{
     /* flex-grow: 1; */
     flex-basis: 100%;
 }
+
+
+/* navigation bar */
+.nav{
+    display: flex;
+    flex: 0;
+    padding-bottom: 24px;
+    background-color: #1F2937;
+}
+.nav-header-logo{
+    display: flex;
+    justify-content: center;
+    font-size: 24px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+.nav-links{
+    display: flex;
+    gap: 10px;
+    justify-content: space-around;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+    color: #E5E7EB;
+}
