--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     display: flex;
     flex-direction: column;
     height: 100vh;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 div{
@@ -35,4 +36,48 @@ div{
     padding: 0;
     font-size: 16px;
     color: #E5E7EB;
+}
+
+
+
+/* title section */
+.title{
+    display: flex;
+    gap: 48px;
+    background-color: #1F2937;
+    padding: 40px 120px;
+}
+
+.title-aside h1{
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+    margin-bottom: 0px;
+}
+
+.title-aside p{
+    font-size: 16px;
+    color: #E5E7EB;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.title-aside button{
+    background-color: #3882F6;
+    border-radius: 6px;
+    color: #E5E7EB;
+    padding: 4px 16px;
+    font-size: 16px;
+    margin-top: 8px;
+}
+
+.title-image{
+    display: flex;
+    color: #E5E7EB;
+    width: 0px;
+    height: 120px;
+    background-color: gray;
+    align-items: center;
+    justify-content: center;
+    align-self: center;
 }
