--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 }
 
 div{
-    border: 2px solid black;
+    /* border: 2px solid black; */
     height: 100%;
     /* flex-grow: 1; */
     flex-basis: 100%;
@@ -76,7 +76,7 @@ div{
     color: #E5E7EB;
     width: 0px;
     height: 120px;
-    background-color: gray;
+    background-color: #474c56;
     align-items: center;
     justify-content: center;
     align-self: center;
@@ -114,3 +114,28 @@ div{
     margin-top: 0px;
     padding: 0 40px;
 }
+
+
+
+/* Quote section */
+.quote{
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    padding: 40px 240px;
+}
+.quote h1{
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 100;
+    color: #1F2937;
+    margin-bottom: 0px;
+}
+.quote p{
+    font-size: 18px;
+    text-align: right;
+    font-weight: 900;
+    margin-top: 0px;
+    padding-right: 50px;
+}
+
