--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     flex-direction: column;
     height: 100vh;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 0;
 }
 
 div{
@@ -19,6 +20,7 @@ div{
     flex: 0;
     padding-bottom: 24px;
     background-color: #1F2937;
+    padding-top: 12px;
 }
 .nav-header-logo{
     display: flex;
@@ -176,4 +178,16 @@ div{
     color: #F9FAF8;
     padding: 4px 18px;
     border-radius: 4px;
+}
+
+
+
+
+/* footer section */
+.footer{
+    display: flex;
+    background-color: #1F2937;
+    color: #F9FAF8;
+    justify-content: center;
+    align-items: center;
 }
