--- a/style.css
+++ b/style.css
@@ -1,38 +1,35 @@
 body{
     display: flex;
     flex-direction: column;
-    height: 100vh;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
+    /* height: 100vh; */
 }
 
 div{
     /* border: 2px solid black; */
-    height: 100%;
+    /* height: 100%; */
     /* flex-grow: 1; */
-    flex-basis: 100%;
+    /* flex-basis: 100%; */
 }
 
 
 /* navigation bar */
 .nav{
     display: flex;
-    flex: 0;
-    padding-bottom: 24px;
     background-color: #1F2937;
+    justify-content: space-around;
     padding-top: 12px;
+    /* padding-bottom: 24px; */
 }
 .nav-header-logo{
-    display: flex;
-    justify-content: center;
     font-size: 24px;
     font-weight: 900;
     color: #F9FAF8;
 }
 .nav-links{
     display: flex;
-    gap: 10px;
-    justify-content: space-around;
+    gap: 24px;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -47,41 +44,44 @@ div{
     display: flex;
     gap: 48px;
     background-color: #1F2937;
-    padding: 40px 120px;
+    justify-content: center;
+    padding: 80px 0px;
+}
+.title-aside{
+    flex-basis: 40%;
 }
 
 .title-aside h1{
     font-size: 48px;
     font-weight: 900;
     color: #F9FAF8;
-    margin-bottom: 0px;
+    margin: 0px;
 }
 
 .title-aside p{
-    font-size: 16px;
+    font-size: 18px;
     color: #E5E7EB;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin-top: 20px;
 }
 
 .title-aside button{
     background-color: #3882F6;
     border-radius: 6px;
     color: #E5E7EB;
-    padding: 4px 16px;
-    font-size: 16px;
+    padding: 4px 24px;
+    font-size: 18px;
+    font-weight: 600;
     margin-top: 8px;
 }
 
 .title-image{
     display: flex;
+    flex-basis: 30%;
     color: #E5E7EB;
-    width: 0px;
-    height: 120px;
+    text-align: center;
     background-color: #474c56;
-    align-items: center;
     justify-content: center;
-    align-self: center;
+    align-items: center;
 }
 
 
