--- a/style.css
+++ b/style.css
@@ -91,10 +91,12 @@ div{
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding: 0px 200px;
+    padding: 30px 0px 60px;
 }
 .info .container{
     display: flex;
+    justify-content: center;
+    padding-top: 10px;
 }
 
 .info .container .item{
@@ -112,9 +114,8 @@ div{
 }
 
 .item p{
-    /* max-width: 180px; */
+    max-width: 180px;
     margin-top: 0px;
-    padding: 0 40px;
 }
 
 
@@ -124,7 +125,7 @@ div{
     display: flex;
     flex-direction: column;
     background-color: #E5E7EB;
-    padding: 40px 240px;
+    padding: 80px 240px;
 }
 .quote h1{
     font-size: 36px;
