--- a/style.css
+++ b/style.css
@@ -3,15 +3,8 @@ body{
     flex-direction: column;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
-    /* height: 100vh; */
 }
 
-div{
-    /* border: 2px solid black; */
-    /* height: 100%; */
-    /* flex-grow: 1; */
-    /* flex-basis: 100%; */
-}
 
 
 /* navigation bar */
@@ -20,7 +13,6 @@ div{
     background-color: #1F2937;
     justify-content: space-around;
     padding-top: 12px;
-    /* padding-bottom: 24px; */
 }
 .nav-header-logo{
     font-size: 24px;
@@ -45,7 +37,7 @@ div{
     gap: 48px;
     background-color: #1F2937;
     justify-content: center;
-    padding: 80px 0px;
+    padding: 140px 0px;
 }
 .title-aside{
     flex-basis: 40%;
@@ -150,15 +142,14 @@ div{
     display: flex;
     background-color: #3882F6;
     color: #F9FAF8;
-    margin: 60px 180px;
-    padding: 30px 60px;
+    margin: 80px 160px;
+    border-radius: 8px;
+    justify-content: space-around;
+    padding: 40px 40px;
 }
 .sign-up-container-text{
     display: flex;
     flex-direction: column;
-    margin-right: -250px;
-    /* justify-content: center; */
-    /* padding: 80px 80px; */
 }
 .sign-up-container-text h1{
     margin-bottom: 0px;
@@ -170,15 +161,16 @@ div{
     display: flex;
     align-items: center;
     justify-content: right;
-    margin-right: 100px;
 }
 
 .sign-up-button button{
+    font-size: 18px;
+    font-weight: 600;
     background-color: #3882F6;
-    border: 2px solid #F9FAF8;
+    border: 3px solid #F9FAF8;
     color: #F9FAF8;
     padding: 4px 18px;
-    border-radius: 4px;
+    border-radius: 6px;
 }
 
 
@@ -191,4 +183,5 @@ div{
     color: #F9FAF8;
     justify-content: center;
     align-items: center;
+    padding: 40px;
 }
